Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_AgreementEvent__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Days_Ago__c</fullName>
        <formula>now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Ago</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Version_Key__c</fullName>
        <label>Document Version Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Events</relationshipLabel>
        <relationshipName>Name</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <formula>IF(
  CONTAINS( echosign_dev1__Description__c , &quot;sent out for signature to&quot;), 
  &quot;SENT&quot;, 
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;sent out for approval to&quot;), 
  &quot;SENT FOR APPROVAL&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;signed by&quot;),
  &quot;SIGNED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;approved by&quot;),
  &quot;APPROVED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;viewed by&quot;),
  &quot;VIEWED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;created by&quot;),
  &quot;CREATED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;cancelled by&quot;),
  &quot;CANCELLED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;declined by&quot;),
  &quot;DECLINED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;reminder sent to&quot;),
  &quot;REMINDER&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;expired&quot;),
  &quot;EXPIRED&quot;,
&quot;OTHER&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Agreement Event</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>